Fix: 이미지 경로를 상대 경로로 변경 (GitHub Pages 호환성)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/01.png" />
+    <link rel="icon" href="./01.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="SKURI Taxi - 성결대학교 학생들을 위한 통합 캠퍼스 생활 플랫폼. 택시 동승 매칭, 실시간 공지사항, 학식 메뉴, 학사일정, 시간표 관리" />
     <title>SKURI Taxi - 성결대학교 통합 캠퍼스 플랫폼</title>
@@ -425,7 +425,7 @@
     <header>
       <div class="container">
         <div class="header-content">
-          <img src="/01.png" alt="SKURI Taxi" class="logo" />
+          <img src="./01.png" alt="SKURI Taxi" class="logo" />
           <div class="header-text">
             <h1>SKURI Taxi</h1>
             <p>성결대학교 통합 캠퍼스 플랫폼</p>
@@ -442,7 +442,7 @@
     <main class="container">
       <section id="about" class="hero-section">
         <div class="app-icon">
-          <img src="/01.png" alt="SKURI Taxi 앱 아이콘" />
+          <img src="./01.png" alt="SKURI Taxi 앱 아이콘" />
         </div>
         <div class="content-card" style="background: linear-gradient(135deg, var(--bg-secondary) 0%, rgba(74, 222, 128, 0.05) 100%);">
           <h3 style="font-size: 1.5rem; margin-bottom: 1.5rem;">SKURI Taxi 소개</h3>
